* fstatat: the meaning of AT_SYMLINK_NOFOLLOW was reversed. Fixed #5731.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36331 a95241bf-73f2-0310-859d-f6bbb57e9c96